# Music-Ferry

./: .dockerignore  .env.docker.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  coding-conventions.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: web-ui.md
docs/plans/: 2026-01-21-spotify-swimmer-design.md  2026-01-21-spotify-swimmer-implementation.md  2026-01-21-sync-transfer-implementation.md  2026-01-21-sync-transfer-redesign.md  2026-01-21-youtube-support-design.md  2026-01-21-youtube-support-implementation.md  2026-03-07-code-audit.md
music_ferry/: browser.py  cli.py  config.py  filenames.py  library.py  notify.py  orchestrator.py  recorder.py  spotify_api.py  tagger.py  transfer.py
music_ferry/metrics/: __init__.py  collectors.py  decorators.py
music_ferry/web/: __init__.py  app.py
scripts/: NOTE.md  headphones-mount.sh  headphones-unmount.sh  headphones-unplug-helper.py  install-systemd-web.sh  install-systemd.sh  install.sh  uninstall.sh
spotify_swimmer/: browser.py  cli.py  config.py  library.py  notify.py  orchestrator.py  recorder.py  spotify_api.py  tagger.py  tracks_db.py  transfer.py
systemd/: music-ferry-unplug-helper.service  music-ferry-web.service  spotify-swimmer.service  spotify-swimmer.timer
tests/: test_browser.py  test_cli.py  test_cli_sources.py  test_config.py  test_filenames.py  test_headphones_service.py  test_integration.py  test_library.py  test_metrics.py  test_notify.py  test_orchestrator.py  test_orchestrator_sources.py  test_recorder.py  test_spotify_api.py  test_sync_service.py  test_tagger.py  test_track_source.py  test_tracks_db.py  test_transfer.py  test_transfer_sources.py  test_web_api.py  test_web_api_transfer_executor.py  test_youtube_downloader.py
(+17 files in other folders)
